# rust_msg_parser_demo

./: .funcignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  host.json
src/: main.rs
